# toon-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  PLAN.md  README.md  WARP.md
.github/workflows/: ci.yml  deploy.yml
crates/toon/: Cargo.toml  README.md
crates/toon-cli/: Cargo.toml  README.md
crates/toon-cli/src/: main.rs
crates/toon-cli/tests/: cli_smoke.rs
crates/toon-wasm/: Cargo.toml  TESTING.md
crates/toon-wasm/src/: js_encode.rs  js_parser.rs  lib.rs
crates/toon/benches/: decode_bench.rs  encode_bench.rs  stream_bench.rs
crates/toon/src/: error.rs  lib.rs  number.rs  options.rs  value.rs
crates/toon/src/de/: direct.rs  mod.rs
crates/toon/src/decode/: mod.rs  parser.rs  path_expand.rs  scanner.rs  validation.rs
crates/toon/src/encode/: encoders.rs  mod.rs  normalize.rs  primitives.rs  writer.rs
crates/toon/src/ser/: mod.rs  stream.rs  value_builder.rs  value_builder_alloc.rs
crates/toon/tests/: alloc_only.rs  chrono.rs  conformance.rs  de_direct_hyphen.rs  decode_parser.rs  decode_scanner.rs  encode_basic.rs  quote_numeric_like.rs  roundtrip.rs  serde_de_typed.rs  serde_nonfinite.rs  serde_ser_typed.rs  serde_stream_equivalence.rs  spec_conformance.rs  strict_blank_lines.rs  strict_empty_table.rs  strict_numeric_like_quote.rs  strict_tabular.rs  strict_trailing_delim.rs  strict_unquoted_cells.rs  strict_unquoted_header.rs  strict_unquoted_numeric_like.rs  strict_validation.rs  tabular_detection.rs  tabular_end_to_end.rs  unit_primitives.rs  unquote_colon_delim.rs
examples/web/: BENCHMARK.md  README.md  benchmark.html  build.sh  index.html  test-benchmark.mjs  test-cdn.html
fuzz/: Cargo.toml  FINDINGS.md  README.md  fuzz.sh  smoke_test.sh
fuzz/fuzz_targets/: fuzz_decode_default.rs  fuzz_decode_strict.rs  fuzz_differential.rs  fuzz_encode.rs  fuzz_roundtrip_json.rs  fuzz_roundtrip_toon.rs  fuzz_structured.rs
