[package]
name = "toon-wasm"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "WebAssembly bindings for TOON serialization format"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
size_opt = ["wee_alloc"]

[dependencies]
toon = { path = "../toon", features = ["serde"] }
wasm-bindgen = "0.2"
serde = "1.0"
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
wee_alloc = { version = "0.4", optional = true }

[dependencies.web-sys]
version = "0.3"
features = ["console"]
