[package]
name = "toon"
version = "0.1.0"
description = "TOON format encoder/decoder with serde integration"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme = "README.md"
repository = "https://github.com/toon-format/toon"
homepage = "https://toonformat.dev"
keywords = ["toon", "serialization", "serde"]
categories = ["encoding", "parser-implementations"]

[features]
default = ["std", "serde"]
std = []
alloc = []
serde = ["dep:serde", "dep:serde_json"]
chrono = ["dep:chrono"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
thiserror = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"], optional = true }

[dev-dependencies]
serde_json = "1.0"
