[package]
name = "toon-rs"
version = "0.1.0"
description = "TOON format encoder/decoder with serde integration"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme = "README.md"
repository = "https://github.com/jimmystridh/toon-rs"
homepage = "https://toonformat.dev"
keywords = ["toon", "serialization", "serde"]
categories = ["encoding", "parser-implementations"]

[features]
# Default keeps current behavior: std + serde + json interop
default = ["std", "serde", "json"]

# std/alloc feature gates
std = []
alloc = []

# Serde integration does not imply serde_json
serde = ["dep:serde"]
# JSON interop (serde_json) requires std
json = ["dep:serde_json", "serde", "std"]

# chrono currently requires std in this crate configuration
chrono = ["dep:chrono", "std"]

# Optional performance micro-optimizations
perf_memchr = ["dep:memchr"]
perf_smallvec = ["dep:smallvec"]
# Direct deserializer (no intermediate Value)
de_direct = []
# Faster numeric parsing via lexical-core (optional)
perf_lexical = ["dep:lexical-core"]

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"], optional = true }
serde_json = { version = "1.0", features = ["preserve_order"], optional = true }
thiserror = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"], optional = true }
memchr = { version = "2", optional = true }
smallvec = { version = "1", default-features = false, optional = true }
lexical-core = { version = "0.8", default-features = false, optional = true }
ryu = { version = "1", default-features = false }

[dev-dependencies]
serde_json = { version = "1.0", features = ["preserve_order"] }
criterion = { version = "0.5" }
rand = "0.8"

[[bench]]
name = "encode_bench"
harness = false

[[bench]]
name = "decode_bench"
harness = false

[[bench]]
name = "stream_bench"
harness = false
